[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/title/TitleBackground.png" type="Texture" id=1]
[ext_resource path="res://Sprites/title/TitleForeground.png" type="Texture" id=2]
[ext_resource path="res://Sprites/title/TitleHyperForeground.png" type="Texture" id=3]
[ext_resource path="res://Sprites/title/TitleCorners.png" type="Texture" id=4]
[ext_resource path="res://Sprites/title/TitleMidground.png" type="Texture" id=5]
[ext_resource path="res://scripts/gui/Title.gd" type="Script" id=6]
[ext_resource path="res://Sprites/gui/NineRect1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/gui/NineRect4.png" type="Texture" id=8]
[ext_resource path="res://Gui/BitPotion32.tres" type="DynamicFont" id=9]
[ext_resource path="res://Gui/Theme.tres" type="Theme" id=10]
[ext_resource path="res://scripts/gui/PlayButton.gd" type="Script" id=11]
[ext_resource path="res://Sounds/button noise.wav" type="AudioStream" id=12]

[node name="Title" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 336, 189 )
scale = Vector2( 2.1, 2.1 )

[node name="Background" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )

[node name="MidGround" type="Sprite" parent="Sprites"]
texture = ExtResource( 5 )

[node name="ForeGround" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )

[node name="HyperForeGround" type="Sprite" parent="Sprites"]
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="Corners" type="Sprite" parent="Sprites"]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 336, 188 )
current = true

[node name="VBoxContainer" type="CenterContainer" parent="Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 640, 360 )
mouse_filter = 2
theme = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/VBoxContainer"]
margin_left = 230.0
margin_right = 410.0
margin_bottom = 360.0
rect_min_size = Vector2( 180, 360 )
mouse_filter = 2

[node name="Buffer" type="Label" parent="Camera2D/VBoxContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 288.0
size_flags_vertical = 7

[node name="BrownNine" type="NinePatchRect" parent="Camera2D/VBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 180.0
margin_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( 90, 16 )
texture = ExtResource( 7 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 11 )

[node name="GreenNine" type="NinePatchRect" parent="Camera2D/VBoxContainer/VBoxContainer/BrownNine"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 0, 13 )
texture = ExtResource( 8 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/VBoxContainer/VBoxContainer/BrownNine/GreenNine"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 0.898039, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 3
text = "Play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Camera2D/VBoxContainer/VBoxContainer/BrownNine/GreenNine"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
shortcut_in_tooltip = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buffer1" type="Label" parent="Camera2D/VBoxContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 180.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 32 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -41.0
margin_top = -23.0
margin_right = 742.0
margin_bottom = 414.0
mouse_filter = 2
color = Color( 0.105882, 0.0941176, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0
[connection signal="mouse_entered" from="Camera2D/VBoxContainer/VBoxContainer/BrownNine" to="Camera2D/VBoxContainer/VBoxContainer/BrownNine" method="_on_BrownNine_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/VBoxContainer/VBoxContainer/BrownNine" to="Camera2D/VBoxContainer/VBoxContainer/BrownNine" method="_on_BrownNine_mouse_exited"]
[connection signal="button_down" from="Camera2D/VBoxContainer/VBoxContainer/BrownNine/GreenNine/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="Camera2D/VBoxContainer/VBoxContainer/BrownNine/GreenNine/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="Camera2D/VBoxContainer/VBoxContainer/BrownNine/GreenNine/TextureButton" to="Camera2D/VBoxContainer/VBoxContainer/BrownNine" method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/VBoxContainer/VBoxContainer/BrownNine/GreenNine/TextureButton" to="Camera2D/VBoxContainer/VBoxContainer/BrownNine" method="_on_TextureButton_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
